--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="/assets/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
   </head>
   <body>
     <header>
       <div class="header_cont">
         <div class="logo_cnt">
           <div class="logo">
-            <img src="/assets/logo.png" alt="logo" />
+            <img src="assets/logo.png" alt="logo" />
           </div>
         </div>
         <div class="lnk_cnt">
           <ul class="qck_lnk">
             <a href="">
               <li class="whatsapp">
-                <img src="/assets/whatsapp-icon.png" alt="whatsapp" />
+                <img src="assets/whatsapp-icon.png" alt="whatsapp" />
               </li>
             </a>
             <li class="booking" onclick="toggleDropdown()">
               <div class="booking_cnt">
-                <img src="/assets/navbar-contact-min.jpg" alt="cc" />
+                <img src="assets/navbar-contact-min.jpg" alt="cc" />
                 <div class="booking_text">
                   <span>You can call us to book your hotel</span>
                   <div class="num">
@@ -164,7 +164,7 @@
               </div>
             </li>
             <li class="currency" onclick="toggleDropdown()">
-              <img src="/assets/nigeria-flag.svg" alt="nigeria-flag" />
+              <img src="assets/nigeria-flag.svg" alt="nigeria-flag" />
               <div class="currency_note">
                 <span>₦</span>
                 <svg
@@ -202,7 +202,7 @@
               </div>
             </li>
             <li class="account" onclick="toggleDropdown()">
-              <img src="/assets/profile-circle-icon.png" alt="nigeria-flag" />
+              <img src="assets/profile-circle-icon.png" alt="nigeria-flag" />
               <div class="account_txt">
                 <span>Account</span>
                 <svg
@@ -250,14 +250,14 @@
       </section>
       <form class="search_form">
         <div class="search">
-          <img src="/assets/search.png" alt="search_icon" />
+          <img src="assets/search.png" alt="search_icon" />
           <input
             type="text"
             placeholder="Search for a city or a particular hotel"
           />
         </div>
         <div class="calender">
-          <img src="/assets/calendar.png" alt="" />
+          <img src="assets/calendar.png" alt="" />
           <input type="text" placeholder="Thu, 04 Sep - Fri, 05 Sep" />
         </div>
         <button>Find Hotels</button>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="overlay_img"></div>
                 <img
-                  src="/assets/hotel_florence_and_suites_b240fd_1_562x422.jpg"
+                  src="assets/hotel_florence_and_suites_b240fd_1_562x422.jpg"
                   alt="hotel_florence_and_suites_b240fd_1_562x422"
                 />
               </div>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="overlay_img"></div>
                 <img
-                  src="/assets/supplier_ubxa8wem1d_1_562x422.jpg"
+                  src="assets/supplier_ubxa8wem1d_1_562x422.jpg"
                   alt="supplier_ubxa8wem1d_1_562x422"
                 />
               </div>
@@ -368,7 +368,7 @@
                 <div class="img_hover">
                   <div class="overlay_img"></div>
                   <img
-                    src="/assets/supplier_leon6lm6zs_13_562x422.png"
+                    src="assets/supplier_leon6lm6zs_13_562x422.png"
                     alt="supplier_leon6lm6zs_13_562x422"
                   />
                 </div>
@@ -386,7 +386,7 @@
                 </div>
                 <div class="overlay_img"></div>
                 <img
-                  src="/assets/supplier_8ucykphmf0_1_562x422.jpg"
+                  src="assets/supplier_8ucykphmf0_1_562x422.jpg"
                   alt="supplier_8ucykphmf0_1_562x422"
                 />
               </div>
@@ -403,7 +403,7 @@
                 </div>
                 <div class="overlay_img"></div>
                 <img
-                  src="/assets/supplier_9nrkna1hbh_0_562x422.jpg"
+                  src="assets/supplier_9nrkna1hbh_0_562x422.jpg"
                   alt="supplier_9nrkna1hbh_0_562x422"
                 />
               </div>
@@ -423,7 +423,7 @@
                 </div>
                 <div class="overlay_img"></div>
                 <img
-                  src="/assets/hotel_wavecrest_beach_resort_630573_6_562x422.jpg"
+                  src="assets/hotel_wavecrest_beach_resort_630573_6_562x422.jpg"
                   alt="hotel_wavecrest_beach_resort_630573_6_562x422"
                 />
               </div>
@@ -449,7 +449,7 @@
                 <p>3,581</p>
                 <h5>Lagos Hotels</h5>
               </div>
-              <img src="/assets/city1.jpeg" alt="city1" />
+              <img src="assets/city1.jpeg" alt="city1" />
               <div class="hov_btn">
                 <button>Book Hotels in Lagos</button>
               </div>
@@ -459,7 +459,7 @@
                 <p>1,248</p>
                 <h5>Abuja Hotels</h5>
               </div>
-              <img src="/assets/city2.jpeg" alt="city2" />
+              <img src="assets/city2.jpeg" alt="city2" />
               <div class="hov_btn">
                 <button>Book Hotels in Abuja</button>
               </div>
@@ -469,7 +469,7 @@
                 <p>288</p>
                 <h5>Calabar Hotels</h5>
               </div>
-              <img src="/assets/city3.jpeg" alt="city3" />
+              <img src="assets/city3.jpeg" alt="city3" />
               <div class="hov_btn">
                 <button>Book Hotels in Calabar</button>
               </div>
@@ -479,7 +479,7 @@
                 <p>441</p>
                 <h5>Port Harcourt Hotels</h5>
               </div>
-              <img src="/assets/city4.jpeg" alt="city4" />
+              <img src="assets/city4.jpeg" alt="city4" />
               <div class="hov_btn">
                 <button>Book Hotels in Port Harcourt</button>
               </div>
@@ -489,7 +489,7 @@
                 <p>255</p>
                 <h5>Owerri Hotels</h5>
               </div>
-              <img src="/assets/city5.jpeg" alt="city5" />
+              <img src="assets/city5.jpeg" alt="city5" />
               <div class="hov_btn">
                 <button>Book Hotels in Owerri</button>
               </div>
@@ -499,7 +499,7 @@
                 <p>221</p>
                 <h5>Uyo Hotels</h5>
               </div>
-              <img src="/assets/city6.jpeg" alt="city6" />
+              <img src="assets/city6.jpeg" alt="city6" />
               <div class="hov_btn">
                 <button>Book Hotels in Uyo</button>
               </div>
@@ -793,14 +793,14 @@
 
       <section class="app">
         <div class="app_cont">
-          <img src="/assets/app-image.png" alt="app" />
+          <img src="assets/app-image.png" alt="app" />
           <div class="app_cpt">
             <h2>Get the Hotels.ng app</h2>
             <h3>Download the hotels.ng app and book a hotel instantly</h3>
             <p>Book your hotel instantly with our Android and iOS Apps.</p>
             <div class="app_btn">
-              <img src="/assets/google-play-min.png" alt="googleplay" />
-              <img src="/assets/app-store.png" alt="appstore" />
+              <img src="assets/google-play-min.png" alt="googleplay" />
+              <img src="assets/app-store.png" alt="appstore" />
             </div>
           </div>
         </div>
@@ -810,7 +810,7 @@
         <div class="sub_cont">
           <div class="img_cpt">
             <div class="cir_img">
-              <img src="/assets/lock.png" alt="lock" />
+              <img src="assets/lock.png" alt="lock" />
             </div>
             <div class="cir_txt">
               <h5>Enter your email address to unlock hotel deals</h5>
@@ -915,8 +915,8 @@
           <div class="right">
             <p>Certified by:</p>
             <div class="rgh_imgs">
-              <img src="/assets/nanta.svg" alt="nanta" />
-              <img src="/assets/ntdc.svg" alt="ntdc" />
+              <img src="assets/nanta.svg" alt="nanta" />
+              <img src="assets/ntdc.svg" alt="ntdc" />
             </div>
           </div>
         </div>
