corrected the path issue

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="callxmenu">
               <div class="num">
                 <div class="img_num">
-                  <img src="/assets/fe.svg" alt="" />
+                  <img src="assets/fe.svg" alt="" />
                   <div class="num_txt">
                     <p>Call us</p>
                     <svg
